--- a/optimizacion/index.qmd
+++ b/optimizacion/index.qmd
@@ -1,7 +1,3 @@
 ## Introducción {.unnumbered}
 
-En esta página encontrará las clases y material sobre la materia Optimización
-
-See @knuth84 for additional discussion of literate programming.
-
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
+En construcción
