--- a/teaching.qmd
+++ b/teaching.qmd
@@ -5,8 +5,6 @@ title: "Teaching"
 As [Jefe de Trabajos Prácticos](https://web.dm.uba.ar/index.php/institucional/integrantes/JTP?view=teacher&id=207:mendiluce-mauricio) in the Department of Mathematics of the FCEyN (University of Buenos Aires). 
 
 - Análisis Numérico (2023,2024,2025)
-- Optimización (2022,2024,2025)
+- [Optimización](https://maurimendiluce.github.io/optimizacion/) (2022,2024,2025)
 - Algebra Lineal Computacional (2023)
 - Matemática II (2022)
-
-En construcción
